added bacteria
